--- a/webapp/.env
+++ b/webapp/.env
@@ -20,10 +20,10 @@ PGDATA=/var/lib/postgresql/data
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_HOST_USER=gnanesegrove@gmail.com
-EMAIL_HOST_PASSWORD=gnanes189673
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
 EMAIL_USE_TLS=True
 
 
-PGADMIN_DEFAULT_EMAIL=gnaneswaran.r.d@egrovesys.com
-PGADMIN_DEFAULT_PASSWORD=egrove
+PGADMIN_DEFAULT_EMAIL=
+PGADMIN_DEFAULT_PASSWORD=
